fix: Adapt timeline headers for all zoom levels
- Implement TimelineHeaderAdapter with zoom-level-appropriate timescales
- Add zoom-aware date formatting for 6 zoom levels (WeekDay → YearQuarter)
- Fix critical day number formatting bug: 'd' → '%d' for proper English display
- Add 8 new I18N format keys for quarters, years, decades, and short months
- Enhance DateFormatHelper with FormatTimelineHeader and decade formatting
- Update timeline headers to use dynamic primary/secondary units per zoom level
- Add CSS for zoom-adaptive headers with fixed-width font strategy
- Maintain I18N consistency across English and Chinese languages
- Include comprehensive unit tests for TimelineHeaderAdapter functionality

--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -87,8 +87,23 @@
   <data name="date.month-year" xml:space="preserve">
     <value>MMM yyyy</value>
   </data>
+  <data name="date.month-short" xml:space="preserve">
+    <value>MMM</value>
+  </data>
   <data name="date.day-number" xml:space="preserve">
-    <value>d</value>
+    <value>%d</value>
+  </data>
+  <data name="date.quarter-year" xml:space="preserve">
+    <value>'Q'q yyyy</value>
+  </data>
+  <data name="date.quarter-short" xml:space="preserve">
+    <value>'Q'q</value>
+  </data>
+  <data name="date.year" xml:space="preserve">
+    <value>yyyy</value>
+  </data>
+  <data name="date.decade" xml:space="preserve">
+    <value>yyyy'-'yyyy</value>
   </data>
 
   <!-- Common UI Elements -->
