--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -106,6 +106,32 @@
     <value>yyyy'-'yyyy</value>
   </data>
 
+  <!-- Extended date formats for header templates -->
+  <data name="date.month-year-verbose" xml:space="preserve">
+    <value>MMMM yyyy</value>
+  </data>
+  <data name="date.day-abbrev" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.month-abbrev" xml:space="preserve">
+    <value>MMM</value>
+  </data>
+  <data name="date.quarter-minimal" xml:space="preserve">
+    <value>q</value>
+  </data>
+  <data name="date.year-short" xml:space="preserve">
+    <value>yy</value>
+  </data>
+  <data name="date.year-minimal" xml:space="preserve">
+    <value>y</value>
+  </data>
+  <data name="date.decade-short" xml:space="preserve">
+    <value>yy's'</value>
+  </data>
+  <data name="date.decade-minimal" xml:space="preserve">
+    <value>yy</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>Save</value>
