feat: enhance date formatting and template testing infrastructure
- Add quarter formatting support to DateFormatHelper
- Add custom %d day format handling for timeline headers
- Update timeline header template tests with correct format expectations
- Add TimelineHeaderDemo page for isolated header testing
- Update navigation menu with new demo page
- Add internationalization resources for new date formats

Supporting infrastructure for the timeline header template system.

--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -132,6 +132,29 @@
     <value>yy</value>
   </data>
 
+  <!-- Syncfusion-aligned date formats for timeline headers -->
+  <data name="date.week-start" xml:space="preserve">
+    <value>%d</value>
+  </data>
+  <data name="date.week-start-day" xml:space="preserve">
+    <value>%d MMM</value>
+  </data>
+  <data name="date.week-range" xml:space="preserve">
+    <value>MMM %d, yyyy</value>
+  </data>
+  <data name="date.day-name-short" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.day-month-year" xml:space="preserve">
+    <value>%d MMM yyyy</value>
+  </data>
+  <data name="date.hour-24" xml:space="preserve">
+    <value>H</value>
+  </data>
+  <data name="date.hour-12" xml:space="preserve">
+    <value>h tt</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>Save</value>
