--- a/src/GanttComponents/Resources/GanttResources.zh-CN.resx
+++ b/src/GanttComponents/Resources/GanttResources.zh-CN.resx
@@ -132,6 +132,29 @@
     <value>yy</value>
   </data>
 
+  <!-- Syncfusion-aligned date formats for timeline headers (Chinese) -->
+  <data name="date.week-start" xml:space="preserve">
+    <value>%d日</value>
+  </data>
+  <data name="date.week-start-day" xml:space="preserve">
+    <value>%d日MM月</value>
+  </data>
+  <data name="date.week-range" xml:space="preserve">
+    <value>yyyy年MM月%d日</value>
+  </data>
+  <data name="date.day-name-short" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.day-month-year" xml:space="preserve">
+    <value>yyyy年MM月%d日</value>
+  </data>
+  <data name="date.hour-24" xml:space="preserve">
+    <value>H时</value>
+  </data>
+  <data name="date.hour-12" xml:space="preserve">
+    <value>h tt</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>保存</value>
