--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -317,91 +317,80 @@
 
   <!-- Timeline Zoom Levels - Syncfusion Aligned (13 levels) -->
   
-  <!-- WeekDay Pattern Levels (Week → Day) -->
-  <data name="ZoomLevel.WeekDay" xml:space="preserve">
-    <value>Week-Day View</value>
+  <!-- 11-Level Integral Pixel Zoom System -->
+  <!-- Week→Day Pattern Levels (Levels 10-11: 68px, 97px) -->
+  <data name="ZoomLevel.WeekDay97px" xml:space="preserve">
+    <value>Week-Day Maximum</value>
   </data>
-  <data name="ZoomLevel.WeekDay.Description" xml:space="preserve">
-    <value>Daily sprint planning with weekly context (60px/day)</value>
+  <data name="ZoomLevel.WeekDay97px.Description" xml:space="preserve">
+    <value>Maximum detail weekly view with daily granularity (97px/day)</value>
   </data>
-  <data name="ZoomLevel.WeekDayMedium" xml:space="preserve">
-    <value>Week-Day Medium</value>
+  <data name="ZoomLevel.WeekDay68px" xml:space="preserve">
+    <value>Week-Day High</value>
   </data>
-  <data name="ZoomLevel.WeekDayMedium.Description" xml:space="preserve">
-    <value>Medium weekly view with daily granularity (45px/day)</value>
-  </data>
-  <data name="ZoomLevel.WeekDayLow" xml:space="preserve">
-    <value>Week-Day Compact</value>
-  </data>
-  <data name="ZoomLevel.WeekDayLow.Description" xml:space="preserve">
-    <value>Compact weekly view with daily tracking (35px/day)</value>
+  <data name="ZoomLevel.WeekDay68px.Description" xml:space="preserve">
+    <value>High detail weekly view with daily tracking (68px/day)</value>
   </data>
   
-  <!-- MonthWeek Pattern Levels (Month → Week) -->
-  <data name="ZoomLevel.MonthWeek" xml:space="preserve">
-    <value>Month-Week View</value>
+  <!-- Month→Day Pattern Levels (Levels 8-9: 34px, 48px) -->
+  <data name="ZoomLevel.MonthDay48px" xml:space="preserve">
+    <value>Month-Day High</value>
   </data>
-  <data name="ZoomLevel.MonthWeek.Description" xml:space="preserve">
-    <value>Monthly overview with weekly breakdown (25px/day)</value>
+  <data name="ZoomLevel.MonthDay48px.Description" xml:space="preserve">
+    <value>Monthly overview with daily breakdown (48px/day)</value>
   </data>
-  <data name="ZoomLevel.MonthWeekMedium" xml:space="preserve">
-    <value>Month-Week Medium</value>
+  <data name="ZoomLevel.MonthDay34px" xml:space="preserve">
+    <value>Month-Day Medium</value>
   </data>
-  <data name="ZoomLevel.MonthWeekMedium.Description" xml:space="preserve">
-    <value>Medium monthly view with weekly periods (20px/day)</value>
-  </data>
-  <data name="ZoomLevel.MonthWeekLow" xml:space="preserve">
-    <value>Month-Week Compact</value>
-  </data>
-  <data name="ZoomLevel.MonthWeekLow.Description" xml:space="preserve">
-    <value>Compact monthly view with weekly periods (18px/day)</value>
+  <data name="ZoomLevel.MonthDay34px.Description" xml:space="preserve">
+    <value>Medium monthly view with daily periods (34px/day)</value>
   </data>
 
-  <!-- QuarterMonth Pattern Levels (Quarter → Month) -->
-  <data name="ZoomLevel.QuarterMonth" xml:space="preserve">
-    <value>Quarter-Month View</value>
+  <!-- Quarter→Month Pattern Levels (Levels 6-7: 17px, 24px) -->
+  <data name="ZoomLevel.QuarterMonth24px" xml:space="preserve">
+    <value>Quarter-Month High</value>
   </data>
-  <data name="ZoomLevel.QuarterMonth.Description" xml:space="preserve">
-    <value>Quarterly overview with monthly breakdown (15px/day)</value>
+  <data name="ZoomLevel.QuarterMonth24px.Description" xml:space="preserve">
+    <value>Quarterly overview with monthly breakdown (24px/day)</value>
   </data>
-  <data name="ZoomLevel.QuarterMonthMedium" xml:space="preserve">
+  <data name="ZoomLevel.QuarterMonth17px" xml:space="preserve">
     <value>Quarter-Month Medium</value>
   </data>
-  <data name="ZoomLevel.QuarterMonthMedium.Description" xml:space="preserve">
-    <value>Medium quarterly view with monthly periods (12px/day)</value>
-  </data>
-  <data name="ZoomLevel.QuarterMonthLow" xml:space="preserve">
-    <value>Quarter-Month Compact</value>
-  </data>
-  <data name="ZoomLevel.QuarterMonthLow.Description" xml:space="preserve">
-    <value>Compact quarterly view with monthly markers (10px/day)</value>
+  <data name="ZoomLevel.QuarterMonth17px.Description" xml:space="preserve">
+    <value>Medium quarterly view with monthly periods (17px/day)</value>
   </data>
   
-  <!-- YearQuarter Pattern Levels (Year → Quarter) -->
-  <data name="ZoomLevel.YearQuarter" xml:space="preserve">
-    <value>Year-Quarter View</value>
+  <!-- Month-only Pattern Levels (Levels 4-5: 8px, 12px) -->
+  <data name="ZoomLevel.Month12px" xml:space="preserve">
+    <value>Month-only High</value>
   </data>
-  <data name="ZoomLevel.YearQuarter.Description" xml:space="preserve">
-    <value>Annual overview with quarterly breakdown (8px/day)</value>
+  <data name="ZoomLevel.Month12px.Description" xml:space="preserve">
+    <value>Month-focused view for project planning (12px/day)</value>
   </data>
-  <data name="ZoomLevel.YearQuarterMedium" xml:space="preserve">
+  <data name="ZoomLevel.Month8px" xml:space="preserve">
+    <value>Month-only Medium</value>
+  </data>
+  <data name="ZoomLevel.Month8px.Description" xml:space="preserve">
+    <value>Compact monthly view for overview (8px/day)</value>
+  </data>
+  
+  <!-- Year→Quarter Pattern Levels (Levels 1-3: 3px, 4px, 6px) -->
+  <data name="ZoomLevel.YearQuarter6px" xml:space="preserve">
+    <value>Year-Quarter High</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter6px.Description" xml:space="preserve">
+    <value>Annual overview with quarterly breakdown (6px/day)</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter4px" xml:space="preserve">
     <value>Year-Quarter Medium</value>
   </data>
-  <data name="ZoomLevel.YearQuarterMedium.Description" xml:space="preserve">
-    <value>Medium annual view with quarterly periods (6.5px/day)</value>
+  <data name="ZoomLevel.YearQuarter4px.Description" xml:space="preserve">
+    <value>Medium annual view with quarterly periods (4px/day)</value>
   </data>
-  <data name="ZoomLevel.YearQuarterLow" xml:space="preserve">
-    <value>Year-Quarter Compact</value>
-  </data>
-  <data name="ZoomLevel.YearQuarterLow.Description" xml:space="preserve">
-    <value>Extended multi-year planning with quarterly markers (5px/day)</value>
-  </data>
-  
-  <!-- YearQuarter Minimal Pattern Level (Minimum day width) -->
-  <data name="ZoomLevel.YearQuarterMin" xml:space="preserve">
+  <data name="ZoomLevel.YearQuarter3px" xml:space="preserve">
     <value>Year-Quarter Minimal</value>
   </data>
-  <data name="ZoomLevel.YearQuarterMin.Description" xml:space="preserve">
+  <data name="ZoomLevel.YearQuarter3px.Description" xml:space="preserve">
     <value>Long-term strategic view with minimum day width (3px/day)</value>
   </data>
 
