--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -106,6 +106,61 @@
     <value>yyyy'-'yyyy</value>
   </data>
 
+  <!-- Extended date formats for header templates -->
+  <data name="date.month-year-verbose" xml:space="preserve">
+    <value>MMMM yyyy</value>
+  </data>
+  <data name="date.day-abbrev" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.month-abbrev" xml:space="preserve">
+    <value>MMM</value>
+  </data>
+  <data name="date.quarter-minimal" xml:space="preserve">
+    <value>q</value>
+  </data>
+  <data name="date.year-short" xml:space="preserve">
+    <value>yy</value>
+  </data>
+  <data name="date.year-minimal" xml:space="preserve">
+    <value>y</value>
+  </data>
+  <data name="date.decade-short" xml:space="preserve">
+    <value>yy's'</value>
+  </data>
+  <data name="date.decade-minimal" xml:space="preserve">
+    <value>yy</value>
+  </data>
+
+  <!-- Syncfusion-aligned date formats for timeline headers -->
+  <data name="date.week-start" xml:space="preserve">
+    <value>%d</value>
+  </data>
+  <data name="date.week-start-day" xml:space="preserve">
+    <value>%d MMM</value>
+  </data>
+  <data name="date.week-range" xml:space="preserve">
+    <value>MMM %d, yyyy</value>
+  </data>
+  <data name="date.day-name-short" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.day-month-year" xml:space="preserve">
+    <value>%d MMM yyyy</value>
+  </data>
+  <data name="date.quarter-month-year" xml:space="preserve">
+    <value>MMM yyyy</value>
+  </data>
+  <data name="date.month-start-day" xml:space="preserve">
+    <value>%d MMM</value>
+  </data>
+  <data name="date.hour-24" xml:space="preserve">
+    <value>H</value>
+  </data>
+  <data name="date.hour-12" xml:space="preserve">
+    <value>h tt</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>Save</value>
@@ -260,45 +315,86 @@
     <value>Progress</value>
   </data>
 
-  <!-- Timeline Zoom Levels -->
-  <data name="zoom.level.week-day" xml:space="preserve">
-    <value>Week-Day</value>
+  <!-- Timeline Zoom Levels - Syncfusion Aligned (13 levels) -->
+  
+  <!-- 11-Level Integral Pixel Zoom System -->
+  <!-- Week→Day Pattern Levels (Levels 10-11: 68px, 97px) -->
+  <data name="ZoomLevel.WeekDay97px" xml:space="preserve">
+    <value>Week-Day Maximum</value>
   </data>
-  <data name="zoom.level.month-day" xml:space="preserve">
-    <value>Month-Day</value>
+  <data name="ZoomLevel.WeekDay97px.Description" xml:space="preserve">
+    <value>Daily sprint planning with weekly context (97px/day)</value>
   </data>
-  <data name="zoom.level.month-week" xml:space="preserve">
-    <value>Month-Week</value>
+  <data name="ZoomLevel.WeekDay68px" xml:space="preserve">
+    <value>Week-Day Medium</value>
   </data>
-  <data name="zoom.level.quarter-week" xml:space="preserve">
-    <value>Quarter-Week</value>
+  <data name="ZoomLevel.WeekDay68px.Description" xml:space="preserve">
+    <value>Medium weekly view with daily granularity (68px/day)</value>
   </data>
-  <data name="zoom.level.quarter-month" xml:space="preserve">
-    <value>Quarter-Month</value>
+  
+  <!-- Month→Day Pattern Levels (Levels 8-9: 34px, 48px) -->
+  <data name="ZoomLevel.MonthDay48px" xml:space="preserve">
+    <value>Month-Day View</value>
   </data>
-  <data name="zoom.level.year-quarter" xml:space="preserve">
-    <value>Year-Quarter</value>
+  <data name="ZoomLevel.MonthDay48px.Description" xml:space="preserve">
+    <value>Monthly overview with daily breakdown (48px/day)</value>
+  </data>
+  <data name="ZoomLevel.MonthDay34px" xml:space="preserve">
+    <value>Month-Day Medium</value>
+  </data>
+  <data name="ZoomLevel.MonthDay34px.Description" xml:space="preserve">
+    <value>Medium monthly view with daily periods (34px/day)</value>
   </data>
 
-  <!-- Timeline Zoom Level Descriptions -->
-  <data name="zoom.description.week-day" xml:space="preserve">
-    <value>Sprint planning, daily management (2-8 weeks)</value>
+  <!-- Quarter→Month Pattern Levels (Levels 6-7: 17px, 24px) -->
+  <data name="ZoomLevel.QuarterMonth24px" xml:space="preserve">
+    <value>Quarter-Month View</value>
   </data>
-  <data name="zoom.description.month-day" xml:space="preserve">
-    <value>Project milestones, phase tracking (3-12 months)</value>
+  <data name="ZoomLevel.QuarterMonth24px.Description" xml:space="preserve">
+    <value>Quarterly overview with monthly breakdown (24px/day)</value>
   </data>
-  <data name="zoom.description.month-week" xml:space="preserve">
-    <value>Quarterly planning, resource scheduling (6-18 months)</value>
+  <data name="ZoomLevel.QuarterMonth17px" xml:space="preserve">
+    <value>Quarter-Month Medium</value>
   </data>
-  <data name="zoom.description.quarter-week" xml:space="preserve">
-    <value>Annual planning, strategic roadmaps (6-24 months)</value>
+  <data name="ZoomLevel.QuarterMonth17px.Description" xml:space="preserve">
+    <value>Medium quarterly view with monthly periods (17px/day)</value>
   </data>
-  <data name="zoom.description.quarter-month" xml:space="preserve">
-    <value>Multi-year programs, portfolio planning (1-5 years)</value>
+  
+  <!-- Month-only Pattern Levels (Levels 4-5: 8px, 12px) -->
+  <data name="ZoomLevel.Month12px" xml:space="preserve">
+    <value>Month View</value>
   </data>
-  <data name="zoom.description.year-quarter" xml:space="preserve">
-    <value>Enterprise portfolio, strategic planning (2-10 years)</value>
+  <data name="ZoomLevel.Month12px.Description" xml:space="preserve">
+    <value>Monthly view with compact layout (12px/day)</value>
   </data>
+  <data name="ZoomLevel.Month8px" xml:space="preserve">
+    <value>Month Compact</value>
+  </data>
+  <data name="ZoomLevel.Month8px.Description" xml:space="preserve">
+    <value>Annual overview with monthly breakdown (8px/day)</value>
+  </data>
+  
+  <!-- Year→Quarter Pattern Levels (Levels 1-3: 3px, 4px, 6px) -->
+  <data name="ZoomLevel.YearQuarter6px" xml:space="preserve">
+    <value>Year-Quarter View</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter6px.Description" xml:space="preserve">
+    <value>Medium annual view with quarterly periods (6px/day)</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter4px" xml:space="preserve">
+    <value>Year-Quarter Medium</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter4px.Description" xml:space="preserve">
+    <value>Extended multi-year planning with quarterly markers (4px/day)</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter3px" xml:space="preserve">
+    <value>Year-Quarter Minimal</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter3px.Description" xml:space="preserve">
+    <value>Long-term strategic view with minimum day width (3px/day)</value>
+  </data>
+
+
 
   <!-- Timeline Zoom UI Controls -->
   <data name="zoom.controls.zoom-in" xml:space="preserve">
