--- a/src/GanttComponents/Resources/GanttResources.zh-CN.resx
+++ b/src/GanttComponents/Resources/GanttResources.zh-CN.resx
@@ -106,6 +106,61 @@
     <value>yyyy年'-'yyyy年</value>
   </data>
 
+  <!-- Extended date formats for header templates -->
+  <data name="date.month-year-verbose" xml:space="preserve">
+    <value>yyyy年MMMM</value>
+  </data>
+  <data name="date.day-abbrev" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.month-abbrev" xml:space="preserve">
+    <value>M月</value>
+  </data>
+  <data name="date.quarter-minimal" xml:space="preserve">
+    <value>q</value>
+  </data>
+  <data name="date.year-short" xml:space="preserve">
+    <value>yy年</value>
+  </data>
+  <data name="date.year-minimal" xml:space="preserve">
+    <value>y</value>
+  </data>
+  <data name="date.decade-short" xml:space="preserve">
+    <value>yy年代</value>
+  </data>
+  <data name="date.decade-minimal" xml:space="preserve">
+    <value>yy</value>
+  </data>
+
+  <!-- Syncfusion-aligned date formats for timeline headers (Chinese) -->
+  <data name="date.week-start" xml:space="preserve">
+    <value>%d日</value>
+  </data>
+  <data name="date.week-start-day" xml:space="preserve">
+    <value>%d日MM月</value>
+  </data>
+  <data name="date.week-range" xml:space="preserve">
+    <value>yyyy年MM月%d日</value>
+  </data>
+  <data name="date.day-name-short" xml:space="preserve">
+    <value>ddd</value>
+  </data>
+  <data name="date.day-month-year" xml:space="preserve">
+    <value>yyyy年MM月%d日</value>
+  </data>
+  <data name="date.quarter-month-year" xml:space="preserve">
+    <value>yyyy年MM月</value>
+  </data>
+  <data name="date.month-start-day" xml:space="preserve">
+    <value>MM月%d日</value>
+  </data>
+  <data name="date.hour-24" xml:space="preserve">
+    <value>H时</value>
+  </data>
+  <data name="date.hour-12" xml:space="preserve">
+    <value>h tt</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>保存</value>
@@ -260,44 +315,83 @@
     <value>进度</value>
   </data>
 
-  <!-- Timeline Zoom Levels -->
-  <data name="zoom.level.week-day" xml:space="preserve">
-    <value>周-日</value>
+  <!-- Timeline Zoom Levels - Syncfusion Aligned (13 levels) -->
+  
+  <!-- 11级整数像素缩放系统 -->
+  <!-- 周→日模式级别 (级别 10-11: 68px, 97px) -->
+  <data name="ZoomLevel.WeekDay97px" xml:space="preserve">
+    <value>周-日最大</value>
   </data>
-  <data name="zoom.level.month-day" xml:space="preserve">
-    <value>月-日</value>
+  <data name="ZoomLevel.WeekDay97px.Description" xml:space="preserve">
+    <value>带周上下文的每日冲刺规划 (97px/天)</value>
   </data>
-  <data name="zoom.level.month-week" xml:space="preserve">
-    <value>月-周</value>
+  <data name="ZoomLevel.WeekDay68px" xml:space="preserve">
+    <value>周-日中等</value>
   </data>
-  <data name="zoom.level.quarter-week" xml:space="preserve">
-    <value>季-周</value>
+  <data name="ZoomLevel.WeekDay68px.Description" xml:space="preserve">
+    <value>具有每日粒度的中等周视图 (68px/天)</value>
   </data>
-  <data name="zoom.level.quarter-month" xml:space="preserve">
-    <value>季-月</value>
+  
+  <!-- 月→日模式级别 (级别 8-9: 34px, 48px) -->
+  <data name="ZoomLevel.MonthDay48px" xml:space="preserve">
+    <value>月-日视图</value>
   </data>
-  <data name="zoom.level.year-quarter" xml:space="preserve">
-    <value>年-季</value>
+  <data name="ZoomLevel.MonthDay48px.Description" xml:space="preserve">
+    <value>带日分解的月度概览 (48px/天)</value>
+  </data>
+  <data name="ZoomLevel.MonthDay34px" xml:space="preserve">
+    <value>月-日中等</value>
+  </data>
+  <data name="ZoomLevel.MonthDay34px.Description" xml:space="preserve">
+    <value>具有日周期的中等月度视图 (34px/天)</value>
   </data>
 
-  <!-- Timeline Zoom Level Descriptions -->
-  <data name="zoom.description.week-day" xml:space="preserve">
-    <value>冲刺规划，日常管理 (2-8周)</value>
+  <!-- 季→月模式级别 (级别 6-7: 17px, 24px) -->
+  <data name="ZoomLevel.QuarterMonth24px" xml:space="preserve">
+    <value>季-月视图</value>
   </data>
-  <data name="zoom.description.month-day" xml:space="preserve">
-    <value>项目里程碑，阶段跟踪 (3-12个月)</value>
+  <data name="ZoomLevel.QuarterMonth24px.Description" xml:space="preserve">
+    <value>带月分解的季度概览 (24px/天)</value>
   </data>
-  <data name="zoom.description.month-week" xml:space="preserve">
-    <value>季度规划，资源调度 (6-18个月)</value>
+  <data name="ZoomLevel.QuarterMonth17px" xml:space="preserve">
+    <value>季-月中等</value>
   </data>
-  <data name="zoom.description.quarter-week" xml:space="preserve">
-    <value>年度规划，战略路线图 (6-24个月)</value>
+  <data name="ZoomLevel.QuarterMonth17px.Description" xml:space="preserve">
+    <value>具有月周期的中等季度视图 (17px/天)</value>
   </data>
-  <data name="zoom.description.quarter-month" xml:space="preserve">
-    <value>多年项目，组合规划 (1-5年)</value>
+  
+  <!-- 月专用模式级别 (级别 4-5: 8px, 12px) -->
+  <data name="ZoomLevel.Month12px" xml:space="preserve">
+    <value>月视图</value>
   </data>
-  <data name="zoom.description.year-quarter" xml:space="preserve">
-    <value>企业组合，战略规划 (2-10年)</value>
+  <data name="ZoomLevel.Month12px.Description" xml:space="preserve">
+    <value>紧凑月度视图 (12px/天)</value>
+  </data>
+  <data name="ZoomLevel.Month8px" xml:space="preserve">
+    <value>月紧凑</value>
+  </data>
+  <data name="ZoomLevel.Month8px.Description" xml:space="preserve">
+    <value>带月分解的年度概览 (8px/天)</value>
+  </data>
+  
+  <!-- 年→季模式级别 (级别 1-3: 3px, 4px, 6px) -->
+  <data name="ZoomLevel.YearQuarter6px" xml:space="preserve">
+    <value>年-季视图</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter6px.Description" xml:space="preserve">
+    <value>具有季度周期的中等年度视图 (6px/天)</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter4px" xml:space="preserve">
+    <value>年-季中等</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter4px.Description" xml:space="preserve">
+    <value>带季度标记的扩展多年规划 (4px/天)</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter3px" xml:space="preserve">
+    <value>年-季最小</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter3px.Description" xml:space="preserve">
+    <value>具有最小日宽度的长期战略视图 (3px/天)</value>
   </data>
 
   <!-- Timeline Zoom UI Controls -->
