--- a/src/GanttComponents/Resources/GanttResources.zh-CN.resx
+++ b/src/GanttComponents/Resources/GanttResources.zh-CN.resx
@@ -161,6 +161,45 @@
     <value>h tt</value>
   </data>
 
+  <!-- Timeline Header I18N Keys for Enhanced Localization -->
+  <data name="timeline.header.year-format" xml:space="preserve">
+    <value>yyyy年</value>
+  </data>
+  <data name="timeline.header.quarter-format" xml:space="preserve">
+    <value>yyyy年第q季度</value>
+  </data>
+  <data name="timeline.header.month-format" xml:space="preserve">
+    <value>yyyy年M月</value>
+  </data>
+  <data name="timeline.header.week-format" xml:space="preserve">
+    <value>第w周</value>
+  </data>
+  <data name="timeline.header.day-format" xml:space="preserve">
+    <value>M月d日</value>
+  </data>
+
+  <!-- Timeline Component-Level I18N Keys (for future floating/dense headers) -->
+  <data name="timeline.component.primary" xml:space="preserve">
+    <value>{0}</value>
+  </data>
+  <data name="timeline.component.secondary" xml:space="preserve">
+    <value>{0}</value>
+  </data>
+
+  <!-- Timeline Floating Headers (Milestone 1 Foundation) -->
+  <data name="timeline.floating.year" xml:space="preserve">
+    <value>{0}年</value>
+  </data>
+  <data name="timeline.floating.quarter" xml:space="preserve">
+    <value>第{0}季度</value>
+  </data>
+  <data name="timeline.floating.month" xml:space="preserve">
+    <value>{0}月</value>
+  </data>
+  <data name="timeline.floating.context" xml:space="preserve">
+    <value>{0} • {1} • {2}</value>
+  </data>
+
   <!-- Common UI Elements -->
   <data name="common.save" xml:space="preserve">
     <value>保存</value>
